# moodsense-ai

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  gradio_app.py  mlflow.db  pyproject.toml  requirements.txt  serve.py  train.py
app/: __init__.py
app/api/: __init__.py  dependencies.py  main.py  routes.py  schemas.py
app/cli/: __init__.py  serve.py  train.py
app/core/: __init__.py  config.py  constants.py  logging.py
app/models/: __init__.py  predictor.py  trainer.py
app/services/: __init__.py  embeddings.py  preprocessing.py  recommendation.py
app/ui/: __init__.py  gradio_app.py
configs/: prometheus.yml
notebooks/: 01_training_pipeline.ipynb
tests/: __init__.py  conftest.py  test_api.py  test_embeddings.py  test_preprocessing.py  test_recommendation.py
